--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 const response = await fetch('https://api.github.com/repos/makar1310/cardproj/contents/data.json', {
                     method: 'PUT',
                     headers: {
-                        'Authorization': 'token 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', // Замените на ваш GitHub токен
+                        'Authorization': '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', // Замените на ваш GitHub токен
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
